# ray-tracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  color.cc  color.h  main.cc  vec3.cc  vec3.h
apps/: CMakeLists.txt  main.cc
etc/: ccache.cmake  cflags.cmake  lto.cmake  scanners.cmake
src/: CMakeLists.txt  color.cc  color.h  ray.cc  ray.h  vec3.cc  vec3.h
